--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-echo "__pycache__/
-*.pyc
-.env
-.venv
-venv/" > .gitignore
+# Create .gitignore to avoid pushing unnecessary files
+echo __pycache__/ > .gitignore
+echo *.pyc >> .gitignore
+echo .env >> .gitignore
+echo .venv/ >> .gitignore
+echo venv/ >> .gitignore
