--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ Flask==3.0.0
 gunicorn==21.2.0
 joblib==1.3.2
 numpy==1.26.2
-scikit-learn==1.3.2
+scikit-learn==1.6.1  # Changed from 1.3.2
 Werkzeug==3.0.1
